ags (3.8.10)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* improved ags_hq_pitch_util.c

ags (3.8.9)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed AgsRecallChannelRun::dispose()

ags (3.8.8)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed tuning of AgsSF2SynthGenerator and AgsSFZSynthGenerator
	* fixed ags-fx-lfo default values of ports

ags (3.8.7)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed memory leak in ags_devout.c, ags_devin.c and ags_midiin.c
	* fixed AgsPreferences buttons

ags (3.8.6)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* improved AgsPluginBrowser proper reset
	* improved breaking circular dependencies of libags_audio.so
	* fixed functional integration tests
	* fixed deprecated Gtk+-3.0 symbols all GTK_STOCK_*

ags (3.8.5)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed ags_lfo_synth_util.c offset of iteration

ags (3.8.4)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed dead keys recently introduced by ags_hq_pitch_util.c
	* improved iteration over AgsChannel in ags_fx_factory.c

ags (3.8.3)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed missing store of aliase and volume
	* edited NEWS

ags (3.8.2)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed gtk-doc

ags (3.8.1)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented volume control of AgsSyncsynth
	* implemented volume control of AgsFMSyncsynth
	* implemented volume control of AgsMatrix
	* fixed AgsFMOscillator layout

ags (3.8.0)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented volume control of AgsFFPlayer
	* implemented volume control of AgsPitchSampler
	* implemented ags-fx-two-pass-aliase
	* implemented ags_linear_interpolate_util.c
	* implemented ags_hq_pitch_util.c
	* implemented ags_phase_shift_util.c
	* implemented ags_frequency_aliase_util.c